# Courtisans_Game

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: augmentation.py  greedy_bot.py  jeu.py  mcts_network.py
cfr/: check_combo.py  check_redeal.py  check_redeal_canon.py  check_redeal_lossless.py  count_infosets.py  courtisans_assassin.py  courtisans_combo.py  courtisans_mini.py  courtisans_redeal.py  deep_cfr_mini.py  diag_strategy_buffer.py  plot_compare.py  plot_deep_cfr_mini.py  run_combo_chain.sh  solve_mini.py
documentations/: algorithme_entrainement_vulgarise.md  ameliorations.md  analyse_entrainement_v1.md  architecture_technique.md  configuration.md  entrainement.md  etat_des_lieux_et_roadmap.md  infra_wsl_runs_longs.md  leviers_apprentissage.md  rapport_expert.md  regles.md  strategie_entrainement_v2.md  streamlit_app_spec.md  synthese_etat_projet.md
scripts/: bc_greedy.py  benchmark.py  benchmark_paired_final.py  bootstrap_model.py  confirm_awr.py  confirm_champion.py  cross_table.py  cross_table_awr.py  dagger_greedy.py  diagnostics.py  discriminator.py  discriminator_paired.py  q3_paired_benchmark.py  remeasure_fair.py  remeasure_greedy.py  smoke_ai_runner.py  smoke_apptest.py  test_augmentation.py  trajectory_greedy.py
streamlit_app/: ai_runner.py  courtisans_app.py  state.py
tests/: conftest.py  test_action_mapper.py  test_arena.py  test_assassin.py  test_assassin_heuristic.py  test_augmentation.py  test_batched_mcts.py  test_card_ownership.py  test_game_engine.py  test_pimc.py  (+1 more)
(+5 files in other folders)
