[project]
name = "courtisans-game"
version = "0.1.0"
description = "Courtisans card game with an AlphaZero-style AI and a Streamlit UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dm-tree>=0.1.10",
    "matplotlib>=3.10.9",
    "numpy>=2.0",
    "open-spiel>=1.6.15",
    "pillow>=10.0",
    "streamlit>=1.30",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
courtisans = "courtisans_game.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
